--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,10 +2,10 @@
 
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android" >
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_recycler_view"
     >
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.RecyclerView>
 </layout>
