--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="@dimen/padding"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
 
@@ -34,6 +34,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:padding="2dp"
+                android:textSize="18dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/firstname"
                 />
@@ -42,6 +43,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:padding="2dp"
+                android:textSize="18dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/lastname"
                 />
