declaring the data into the layout

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
 
+    <data>
+        <variable
+            name="PersonVM"
+            type="com.example.ntumba.mvvm_databinding.viewModels.PersonsViewModel"/>
+    </data>
+
+
 <LinearLayout
     android:orientation="vertical"
     android:padding="@dimen/padding"
