--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -13,6 +13,7 @@
 <LinearLayout
     android:orientation="vertical"
     android:padding="@dimen/padding"
+    android:id="@+id/singleItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
