--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -47,6 +47,7 @@
                 android:text="@{PersonVM.firstname}"
                 android:layout_height="wrap_content"
                 android:id="@+id/firstname"
+                android:textStyle="bold"
                 />
 
 
@@ -56,6 +57,7 @@
                 android:textSize="@dimen/nameSize"
                 android:layout_height="wrap_content"
                 android:id="@+id/lastname"
+                android:textStyle="bold"
                 android:text="@{PersonVM.lastname}"
                 />
 
