Adding a new layout file , and inflating it in the edit fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="padding">16dp</dimen>
     <dimen name="nameSize">18sp</dimen>
+    <dimen name="text_size_for_edit">19sp</dimen>
 </resources>
