Since the old click listener has been removed , click listener on a list item is now implemented using the data binding call back , the on implemented uses lambda expression to call the method that start the Edit activity

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -15,6 +15,7 @@
     android:padding="@dimen/padding"
     android:id="@+id/singleItem"
     android:layout_width="match_parent"
+    android:onClick="@{() -> PersonVM.onContactClicked()}"
     android:layout_height="wrap_content">
 
 
